# wisdm_activity_recognition

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
conf/: config.yaml
conf/data_loading/: default.yaml
conf/inference/: default.yaml
conf/logging/: mlflow.yaml
conf/mlflow/: default.yaml
conf/model/: cnn_lstm.yaml  default.yaml
conf/paths/: default.yaml
conf/plotting/: default.yaml
conf/preprocessing/: default.yaml
conf/training/: default.yaml
scripts/: data_stats.py  download_data.py  export_model.py  infer.py  plot_metrics_simple.py  preprocess_data.py  setup_dvc.sh  train.py
tests/: __init__.py  test_data_processing.py
wisdm/: __init__.py
wisdm/data_processing/: __init__.py  dataset.py  preprocessing.py
wisdm/models/: cnn_lstm.py
